--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "eslint-plugin-cypress": "^2.6.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
@@ -15,17 +16,21 @@
     "redux-mock-store": "^1.5.3"
   },
   "devDependencies": {
+    "cypress": "^3.4.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "jest-fetch-mock": "^2.1.2",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "start-server-and-test": "^1.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src --ext .jsx,.js",
-    "test": "npm run lint && npm run unit",
     "unit": "react-scripts test",
+    "integration": "start-server-and-test start http://localhost:3000 cy:run",
+    "test": "npm run lint && npm run unit && npm run integration",
+    "cy:run": "cypress run",
     "eject": "react-scripts eject"
   },
   "browserslist": {
